# micro-mitten

./: .gitattributes  .gitignore  .travis.yml  Cargo.toml  README.md  tools.sh
.github/: FUNDING.yml
src/: lib.rs  main.rs  pp.rs  ty.rs
src/back/: ctx.rs  mod.rs
src/common/: idx.rs  idx_vec.rs  map.rs  mod.rs  set.rs
src/driver/: mod.rs  opts.rs
src/middle/: ir.rs  mod.rs  pp.rs  transforms.rs  ty_check.rs
src/middle/analysis/: graph.rs  map.rs  mod.rs  paths.rs  pp.rs  zones.rs
src/middle/lowering/: ctx.rs  mod.rs  ty_ctx.rs
src/rt/: Cargo.toml
src/rt/src/: lib.rs
src/syntax/: ast.rs  lex.rs  mod.rs  parse.rs  pp.rs  token.rs
src/test/: bracketed_struct_literal_in_condition.mmtn  call.mmtn  env.mmtn  field_projection.mmtn  if.mmtn  rebind.mmtn  recursive_call.mmtn  simple_binding.mmtn  variant_match.mmtn  variant_projection.mmtn  zero.mmtn
src/test/analysis/: alias.mmtn  alias_unused.mmtn
src/test/benchmarks/: depth_first.mmtn  list_len.mmtn  quick_sort.mmtn
src/test/compile-fail/: arg_count_mismatch.mmtn  arg_type_mismatch.mmtn  args_with_same_name.mmtn  assignment_type_mismatch.mmtn  field_type_mismatch.mmtn  fields_with_same_name.mmtn  multiple_field_instantiations.mmtn  no_struct_literal_in_condition.mmtn  reserved_GC_malloc.mmtn  reserved_free.mmtn  reserved_malloc.mmtn  return_type_mismatch.mmtn  variant_type_mismatch.mmtn  variants_with_same_name.mmtn
src/tools/: data_processing.py
src/tools/mitten-bench/: Cargo.toml
src/tools/mitten-bench/src/: main.rs
src/tools/mitten-test/: Cargo.toml
src/tools/mitten-test/src/: main.rs
(+9 files in other folders)
