[package]
name = "mitten_bench"
version = "0.1.0"
authors = ["Nathan Corbyn <me@nathancorbyn.com>"]
edition = "2018"

[[bin]]
name = "mitten-bench"
path = "src/main.rs"

[dependencies]
mitten_util = { path = "../mitten-util/" }
structopt = "0.2"
termion = "1.5.4"
csv = "1.1.3"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
